--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -75,6 +75,8 @@
 
     </main>
   </div>
+  <!-- MARKDOWN LIBRARY -->
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
   <!-- MAIN SCRIPT -->
   <script src="/static/script.js"></script>
