--- a/static/style.css
+++ b/static/style.css
@@ -545,31 +545,38 @@ body.light .more-btn:hover {
   text-decoration: underline;
 }
 /* ===== CHATGPT STYLE TEXT NORMALIZATION ===== */
+/* ===== CLEAN CHATGPT STYLE ===== */
+
+.msg {
+  font-size: 14px;
+  line-height: 1.5;
+}
 
 .msg.bot h1,
 .msg.bot h2,
 .msg.bot h3,
-.msg.bot h4 {
-  font-size: 15px !important;
+.msg.bot h4,
+.msg.bot h5,
+.msg.bot h6 {
+  font-size: 14px !important;
   font-weight: 600;
-  margin: 6px 0;
+  margin: 4px 0;
 }
 
 .msg.bot p {
-  font-size: 15px;
   margin: 4px 0;
-  line-height: 1.5;
 }
 
-.msg.bot strong {
-  font-weight: 600;
-}
-
-.msg.bot ul {
-  padding-left: 18px;
+.msg.bot ul,
+.msg.bot ol {
   margin: 4px 0;
+  padding-left: 16px;
 }
 
 .msg.bot li {
   margin: 2px 0;
+}
+
+.msg.bot strong {
+  font-weight: 600;
 }
