--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -10,6 +10,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      overflow-y: auto !important;
     }
 
     header {
@@ -171,3 +172,4 @@ document.getElementById("searchInput").addEventListener("input", function () {
 
 </body>
 </html>
+
